
	* src/regex.c : Rework.

	* src/device.c, src/parse_tab.y : Rework regex calls.

	* src/device_private.h : Extract from device.h the stuff that 
	should not be exposed to powermand.c.

	* : More general cleanup of header files, copyright block, etc..

	* test/tregex.c, test/t05, test/t05.exp : Added tests for xregex.c.

	* test/vpcd.c : Remove pthreads support.

2008-05-30 Jim Garlick <garlick@llnl.gov>

	* src/client.c : Allow instantiation with a single stdin/stdout
	client which causes daemon to terminate when it goes away.

	* src/powermand.c : Add --stdio and --force-notroot options.

	* src/powerman.c : Add --server-path and --config-path options
	which allow client and server to run together as coprocesses.

	* src/wrappers.c : Allow NULL ptyname argument to Forkpty().

	* src/error.c : Removed file::line from lsd error messages.

	* test/* : Add integrated tests.

	* configure.ac, src/Makefile.am, src/parse_* : Disable fatal 
	configure error if flex is not found.  Check in lex/yacc build 
	products so powerman can be built without those.

	* wrappers.[ch] : Many wrappers dropped, others renamed and
	split off to x*.[ch] files.

2008-05-23 Jim Garlick <garlick@llnl.gov>

	* autoconf.ac, src/powerman.c : Use HAVE_GENDERS_H for <genders.h>.

	* autoconf.ac, src/wrappers.c : Use HAVE_PTY_H for <pty.h>.

2008-05-22 Jim Garlick <garlick@llnl.gov>

	* parse_tab.y, parse_lex.l, Makefile.am : Use default automake
	rules for lex/yacc and rename files so they fit.

	* parse_tab.y, parse_lex.l : Removed deprecated config file syntax,
	which emitted warnings since 1.0.16 (Jan 2002).  Reformatted some
	lex code for readability.

	* autoconf.ac : Require flex as scaner is (currently) flex specific.

	* autoconf.ac, config/ac_genders.m4, src/Makefile.am, powerman.c : 
	Add --genders option.

	* src/powerman.c, src/powermand.c : Handle missing getopt_long().

2008-05-21 Jim Garlick <garlick@llnl.gov>

	* ChangeLog-1.0 : Updated to reflect trunk (1.0.32+)
