@@ -13,6 +13,8 @@
 
 	* test/vpcd.c : Remove pthreads support.
 
+	* src/xpoll.c : Disable poll() on darwin.
+
 2008-05-30 Jim Garlick <garlick@llnl.gov>
 
 	* src/client.c : Allow instantiation with a single stdin/stdout
